assets: correctly wrap .inline-list

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -100,6 +100,7 @@ ol
 .inline-list
 {
 	display: inline-flex;
+	flex-flow: wrap;
 	list-style: none outside none;
 	margin: 0;
 	padding: 0;
